--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <input type="text" id="input-el">
-   <button id="input-btn">SAVE INPUT</button>
+   <button id="input-btn" onclick="saveLead()">SAVE INPUT</button>
 
 
     <script src="index.js"></script>
